--- a/projetos.html
+++ b/projetos.html
@@ -179,7 +179,7 @@
         <div class="project-content">
           <div class="project-number">2</div>
           <img src="imagens/projeto1.jpg" alt="Projeto 1" class="project-thumb">
-          <a href="projeto1.html" class="project-title">Centro Esportivo Três Rios</a>
+          <a href="projeto1.html" class="project-title">Centro Esportivo </a>
         </div>
       </div>
 
