--- a/projeto4.html
+++ b/projeto4.html
@@ -93,11 +93,11 @@
     }
 
     .img-small {
-      width: 45%;
+      width: 75%;
     }
 
     .img-smaller {
-      width: 64%;
+      width: 94%;
     }
 
     .imagem-com-texto {
@@ -155,28 +155,28 @@
   <main>
     <h1>19° Semana internacional</h1>
 
-    <img src="imagens/.jpg" alt="Imagem de abertura" class="projeto-img">
+    <img src="imagens/projeto4d.jpg" alt="Imagem de abertura" class="projeto-img">
 
     <p>A 19ª Semana Internacional da Escola da Cidade teve como tema “Campo das Águas | Espaços Públicos nas Planícies Fluviais”, trazendo a discussão sobre como pensar a cidade a partir de seus rios, represas e várzeas. O encontro reuniu professores, pesquisadores e estudantes de diferentes países em torno de reflexões sobre paisagem, urbanismo e novas formas de apropriação dos territórios ligados à água.</p>
 
-    <img src="imagens/projeto1a.png" alt="Imagem complementar 1" class="img-small">
+    <img src="imagens/projeto4a.jpg" alt="Imagem complementar 1" class="img-small">
 
     <p>Dentro desse contexto, nosso grupo desenvolveu uma proposta situada na Represa Billings, um espaço fundamental para São Paulo, mas historicamente negligenciado em seu potencial de lazer, convívio e cultura. Inspirados no conceito de um SESC aberto, pensamos em criar um percurso que permitisse reaproximar a população da represa e transformá-la em um lugar vivo, coletivo e acessível.</p>
 
-    <img src="imagens/projeto2.jpg" alt="Imagem complementar 2" class="img-small">
+    <img src="imagens/projeto4b.jpg" alt="Imagem complementar 2" class="img-small">
 
     <p>O projeto partiu da ideia de estabelecer caminhos sobre a água, conectando pontos da represa e possibilitando a experimentação do espaço de forma direta. Esses trajetos não são apenas circulações, mas infraestruturas que abrem espaço para atividades diversas: esportivas, culturais, educativas ou simplesmente de contemplação. Ao longo deles, propusemos equipamentos distribuídos, capazes de ativar diferentes usos e de estimular a permanência.</p>
 
     <img src="imagens/mobilidade.png" alt="Imagem complementar 3" class="img-smaller">
 
     <div class="imagem-com-texto">
-      <img src="imagens/projeto1b.jpg" alt="Imagem complementar 4">
+      <img src="imagens/projeto4c.jpg" alt="Imagem complementar 4">
       <p>
         Com isso, buscamos tornar a Represa Billings não apenas um reservatório de recursos hídricos, mas também um campo público de convívio. A proposta, ao dialogar com o tema da Semana Internacional, reafirma a importância de reconhecer as águas urbanas como protagonistas na construção de cidades mais inclusivas, resilientes e integradas ao meio ambiente.
       </p>
     </div>
 
-    <img src="imagens/projeto1final.jpg" alt="Imagem final" class="img-smaller">
+    <img src="imagens/projeto4e.jpg" alt="Imagem final" class="img-smaller">
   </main>
 
   <footer>
