--- a/projeto1.html
+++ b/projeto1.html
@@ -177,6 +177,7 @@
     </div>
 
     <img src="imagens/projeto1final.jpg" alt="Imagem final" class="img-smaller">
+    <img src="imagens/projeto1c.jpg" alt="Imagem final" class="img-smaller">
   </main>
 
   <footer>
