--- a/cv.html
+++ b/cv.html
@@ -166,7 +166,9 @@
   <div class="cv-entry">
     <strong>Vivência acadêmica internacional – Nuova Accademia di Belle Arti (NABA), Milano</strong><br>
     Foco em metodologias contemporâneas de Design e Interior Design, com aprendizado junto a professores nativos e atuantes no mercado europeu. Experiência marcada pelo contato com diferentes abordagens criativas, metodologias, análise crítica de projetos e ampliação de repertório cultural e técnico em ambiente internacional e interdisciplinar.
-  </div>
+    <div><strong>Formação e Competências em Design:</strong> estudo avançado em Design, com compreensão aprofundada de objetos e da História do Design pela Nuova Accademia di Belle Arti<</div>
+        <strong>Formação e Competências em História da Arte:</strong> Estudo aprofundado em História, com compreensão crítica das principais correntes artísticas, seus contextos históricos e impactos na prática contemporânea do design e da arquitetura da Arte pela Nuova Accademia di Belle Arti (NABA), Milão
+     </div>
 
   <div class="cv-entry">
     <strong>Certificado de AutoCAD – Lab Ideias</strong><br>
@@ -197,12 +199,10 @@
     <div class="cv-block">
       <h2>HABILIDADES TÉCNICAS</h2>
       <div class="cv-entry">
-        <strong>Softwares:</strong> AutoCAD (avançado), SketchUp (intermediário), Revit (básico), Rhino (básico), Photoshop, Illustrator, InDesign, Ftool, QGis, render por colagem<br>
+        <strong>Softwares:</strong> AutoCAD (avançado), SketchUp (intermediario), Revit (básico), Rhino (básico), Photoshop (intermediário), Illustrator (intermediário), InDesign (intermediário), Ftool (intermediário), QGis (intermediário), render por colagem e Microsoft 360º<br>
         <strong>Linguagens:</strong> HTML e CSS<br>
         <strong>Idiomas:</strong> Português (nativo), Inglês (avançado), Espanhol (intermediário), Italiano (intermediário)<br>
-        <strong>Formação e Competências em Design:</strong> estudo avançado em Design, com compreensão aprofundada de objetos e da História do Design pela Nuova Accademia di Belle Arti<br>
-        <strong>Formação e Competências em História da Arte:</strong> Estudo aprofundado em História, com compreensão crítica das principais correntes artísticas, seus contextos históricos e impactos na prática contemporânea do design e da arquitetura da Arte pela Nuova Accademia di Belle Arti (NABA), Milão
-      </div>
+       </div>
     </div>
 
     <div class="cv-block">
