--- a/projeto4.html
+++ b/projeto4.html
@@ -170,13 +170,13 @@
     <img src="imagens/mobilidade.png" alt="Imagem complementar 3" class="img-smaller">
 
     <div class="imagem-com-texto">
-      <img src="imagens/projeto4c.jpg" alt="Imagem complementar 4">
+      <img src="imagens/projeto4f.png" alt="Imagem complementar 4">
       <p>
         Com isso, buscamos tornar a Represa Billings não apenas um reservatório de recursos hídricos, mas também um campo público de convívio. A proposta, ao dialogar com o tema da Semana Internacional, reafirma a importância de reconhecer as águas urbanas como protagonistas na construção de cidades mais inclusivas, resilientes e integradas ao meio ambiente.
       </p>
     </div>
 
-    <img src="imagens/projeto4e.jpg" alt="Imagem final" class="img-smaller">
+    <img src="imagens/projeto4c.jpg" alt="Imagem final" class="img-smaller">
   </main>
 
   <footer>
