--- a/projeto4.html
+++ b/projeto4.html
@@ -167,10 +167,10 @@
 
     <p>O projeto partiu da ideia de estabelecer caminhos sobre a água, conectando pontos da represa e possibilitando a experimentação do espaço de forma direta. Esses trajetos não são apenas circulações, mas infraestruturas que abrem espaço para atividades diversas: esportivas, culturais, educativas ou simplesmente de contemplação. Ao longo deles, propusemos equipamentos distribuídos, capazes de ativar diferentes usos e de estimular a permanência.</p>
 
-    <img src="imagens/mobilidade.png" alt="Imagem complementar 3" class="img-smaller">
+    <img src="imagens/projeto4f.png" alt="Imagem complementar 3" class="img-smaller">
 
     <div class="imagem-com-texto">
-      <img src="imagens/projeto4f.png" alt="Imagem complementar 4">
+      <img src="imagens/mobilidade.png" alt="Imagem complementar 4">
       <p>
         Com isso, buscamos tornar a Represa Billings não apenas um reservatório de recursos hídricos, mas também um campo público de convívio. A proposta, ao dialogar com o tema da Semana Internacional, reafirma a importância de reconhecer as águas urbanas como protagonistas na construção de cidades mais inclusivas, resilientes e integradas ao meio ambiente.
       </p>
